fix: style bugfixes (#429)
* fix: fix double scrollbar issue on neon-page

* fix: fix centered page layout & footer

* fix: general style fixes

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -10,9 +10,15 @@
 @use './views/views';
 
 .app {
-  &.neon {
-    overscroll-behavior: none;
 
+  @include responsive.responsive(tablet) {
+    .content {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+
+  &.neon {
     .app-side-nav,
     .app-top-nav {
       .homepage-logo {
